--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "mcp-registry-mcp-server",
-  "version": "1.0.0",
+  "mcpName": "io.github.wei/mcp-registry",
+  "version": "1.1.0",
   "description": "MCP server for querying the MCP registry",
   "keywords": [
     "mcp",
@@ -24,7 +25,7 @@
   "main": "./dist/index.js",
   "types": "./dist/index.d.ts",
   "bin": {
-    "mcp-registry-server": "./dist/index.js"
+    "mcp-registry-mcp-server": "./dist/index.js"
   },
   "files": [
     "dist",
@@ -36,7 +37,8 @@
     "watch": "tsc --watch",
     "prepare": "npm run build",
     "clean": "rm -rf dist",
-    "typecheck": "tsc --noEmit"
+    "typecheck": "tsc --noEmit",
+    "publish:mcp": "mcp-publisher publish"
   },
   "dependencies": {
     "@modelcontextprotocol/sdk": "^1.0.4",
