feat: update version to 1.1.1 in package.json, package-lock.json, and server.json

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "mcp-registry-mcp-server",
-  "mcpName": "io.github.wei/mcp-registry",
-  "version": "1.1.0",
+  "mcpName": "io.github.wei/mcp-registry-mcp-server",
+  "version": "1.1.1",
   "description": "MCP server for querying the MCP registry",
   "keywords": [
     "mcp",
